@@ -1,3 +1,9 @@
+bobcat (1.17.2) Not yet distributed
+
+  * Arg's constructors changed in accordance with the new (?) getopt()
+    function: missing option arguments are now properly recognized and no
+    longer confused with `unknown options'
+
 bobcat (1.17.1)
 
   * Removed Wrap* wrappers from Bisonc++. Use FnWrap* instead.
